# internal/repositories/identity.go
@@ -1,6 +1,7 @@
 package repositories
 
 import (
+	models "github.com/prince272/konabra/internal/models/identity"
 	"github.com/prince272/konabra/pkg/di"
 	"gorm.io/gorm"
 )
@@ -14,4 +15,12 @@ func NewIdentityRepository(container *di.Container) *IdentityRepository {
 	return &IdentityRepository{
 		defaultDB: defaultDB,
 	}
+}
+
+func (identityRepository *IdentityRepository) CreateUser(user *models.User) (*models.User, error) {
+	result := identityRepository.defaultDB.Create(user)
+	if result.Error != nil {
+		return nil, result.Error
+	}
+	return user, nil
 }
